--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,8 @@
 {{- define "main" }}
-<div class="not-found">404</div>
+
+<div class="not-found">
+    <h1>Whoops!</h1>
+    <p>code 404 Page Missing</p>
+</div>
+
 {{- end }}{{/* end main */ -}}
