layouts: update 404.html

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,8 +1,14 @@
 {{- define "main" }}
 
 <div class="not-found">
-    <h1>Whoops!</h1>
-    <p>code 404 Page Missing</p>
+    <div class="not-found-text">
+        <h1>Whoops!</h1>
+        <p>Code 404 Page Missing</p>
+    </div>
+    <div class="not-found-giphy">
+        <img src="https://media.giphy.com/media/FGTVmzksb2j0k/giphy.gif" alt="oopsie">
+    </div>
 </div>
+
 
 {{- end }}{{/* end main */ -}}
