--- a/assets/css/common/404.css
+++ b/assets/css/common/404.css
@@ -1,4 +1,5 @@
 .not-found {
+    outline: 2px solid pink;
     position: absolute;
     left: 0;
     right: 0;
@@ -7,6 +8,15 @@
     flex-direction: column;
     justify-content: center;
     height: 80%;
-    font-size: 30px;
+    font-size: 20px;
 }
 
+.not-found-giphy{
+    padding-top: 30px;
+    
+}
+.not-found-giphy img{
+    border-radius: 2%;
+    opacity: 0.6;
+    
+}
