--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,8 @@
 <!-- Umami Analytics -->
 <script
   defer
-  src="https://cloud.umami.is/script.js"
+  src="https://init.tinega.link/init.js"
+  data-host-url="https://tinega.link"
   data-website-id="04070b09-cf15-4ee9-84ef-045f72b0739c"
 ></script>
 <!-- End Umami Analytics -->
