fix: update data host url

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,7 +18,7 @@
 <script
   defer
   src="https://init.tinega.link/init.js"
-  data-host-url="https://tinega.link"
+  data-host-url="https://init.tinega.link/"
   data-website-id="04070b09-cf15-4ee9-84ef-045f72b0739c"
 ></script>
 <!-- End Umami Analytics -->
